# pycluster

./: README.md  setup.py
pycluster/: DOCUMENTATION.md  ENHANCED_DOCUMENTATION.md  README.md  install_windows.py  join_worker.py  pyproject.toml  setup.py
pycluster-api/src/: main.py
pycluster-api/src/routes/: cluster.py  llm.py
pycluster-api/src/static/: index.html
pycluster-api/src/static/assets/: index-BiXM3Eo2.js  index-S0NQcHQ-.css
pycluster/examples/: basic_example.py  deepseek_example.py  llm_example.py  multi_machine_example.py
pycluster/pycluster/: cli.py  cli_enhanced.py  dashboard.py  network_utils.py  node.py  windows_utils.py  worker_discovery.py
pycluster/pycluster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pycluster/tests/: test_enhanced_features.py  test_pycluster.py
winray/: cli.py  head.py  task_splitter.py  worker.py
winray.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
winray/templates/: dashboard.html  metrics.html
