[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycluster"
version = "0.2.0"
description = "A Windows-based Python clustering package with dashboard support and LLM capabilities"
readme = "README.md"
authors = [
    {name = "PyCluster Development Team", email = "dev@pycluster.org"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
keywords = ["clustering", "distributed computing", "dask", "windows", "dashboard", "llm", "gpu"]
requires-python = ">=3.8"
dependencies = [
    "dask[complete]>=2023.1.0",
    "distributed>=2023.1.0",
    "psutil>=5.8.0",
    "requests>=2.25.0",
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "pynvml>=11.4.1",
    "torch>=1.12.0",
    "transformers>=4.20.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800"
]
gpu = [
    "dask-cuda>=22.0.0",
    "cupy-cuda11x>=10.0.0",
    "cudf-cu11>=22.0.0"
]

[project.urls]
Homepage = "https://github.com/pycluster/pycluster"
Documentation = "https://pycluster.readthedocs.io"
Repository = "https://github.com/pycluster/pycluster.git"
"Bug Tracker" = "https://github.com/pycluster/pycluster/issues"

[project.scripts]
pycluster = "pycluster.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pycluster*"]

[tool.setuptools.package-data]
pycluster = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

